Added resume to the portfolio : 16th June, 2025

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
             <li>
               <a
                 class="nav-link btn btn-primary"
-                href="#"
+                href="assets/Santosh_Bitra_Resume.pdf"
                 >RESUME <i class="fas fa-arrow-right"></i
               ></a>
             </li>
